--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -11,15 +11,13 @@ export default ComponentLayout
 
 ## Usage
 
-Use text to provide body content and guide users to read and understand the hierarchy of information.
-
-The text component will render an HTML `<span>` tag without any default styling. Use `<p>` for any text that is meant to be a paragraph of text. Use multiple text components or `<p> `if needed to structure your content when you have distinct blocks of text that represent individual paragraphs. This helps with readability and makes it easier for search engines and assistive technologies to understand the content.
+Use the text component to provide content and a clear hierarchy structure. The text component renders an HTML `<span>` tag without any default styling. Use `<p>` for any text that is meant to be a paragraph of text. Use multiple text components or `<p> `if needed to structure your content when you have distinct blocks of text that represent individual paragraphs. This helps with readability and makes it easier for search engines and assistive technologies to understand the content.
 
 ## Options
 
 ### Variant
 
-The text component provides two variant options. The default variant is `default` and the other option is `muted`. The `muted` variant is used to de-emphasize text and is often used for secondary text or as descriptive text when paired with a title.
+The text component provides two variant options: `default` and `muted`. The `muted` variant is used to de-emphasize text and is often used for secondary text or as descriptive text when paired with a title.
 
 <DoDontContainer>
   <Do>
