--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -17,7 +17,7 @@ Use the text component to provide content and a clear hierarchy structure. The t
 
 ### Variant
 
-The text component provides two variant options: `default` and `muted`. The `muted` variant is used to de-emphasize text and is often used for secondary text or as descriptive text when paired with a title.
+The text component provides two variant options: `default` and `muted`. The `muted` variant is used to de-emphasize text or to provide visual contrast when paired with a title.
 
 <DoDontContainer>
   <Do>
