--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -37,7 +37,7 @@ The text component provides two variant options: `default` and `muted`. The `mut
 
 ### Size
 
-The text size ranges from 100 to 700. The default size is 400. The size is built to provide hierarchy for all types of scenarios.
+The text size ranges from 100 to 700, being 400 the default size. This scale is built to provide hierarchy for all types of scenarios.
 
 <DoDontContainer>
   <Do>
