--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -19,7 +19,7 @@ export default ComponentLayout
 
 Use the testimonial component to showcase a quote or a review from a customer. Use the testimonials to build credibility, trust, and provide social proof by displaying customers' sentiments about the product.
 
-Testimonials should be short and concise. Avoid using long or short quotes that can be hard to understand or that don't provide enough context.
+Testimonials should be short and concise. Avoid using long quotes that can be hard to understand or that don't provide enough context.
 
 <DoDontContainer>
   <Do>
