--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -34,7 +34,7 @@ Testimonials should be short and concise. Avoid using long quotes that can be ha
   </Dont>
 </DoDontContainer>
 
-Avatars and logos are optional and can be used to provide more context about the customer or the company. When using an avatar, use an image of the customer to make the testimonial more personal and provide more credibility. If an image is not available, use a logo or similar visual that represents the customer company or organization.
+Avatars and logos are optional and can be used to provide more credibility about the customer or the company. When using an avatar, use an image of the customer to make the testimonial more personal. If an image is not available, use a logo or a similar visual asset that represents the customer company or the organization.
 
 <DoDontContainer>
   <Do>
