--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -46,8 +46,7 @@ Avatars and logos are optional and can be used to provide more credibility about
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/bcda5e31-1ccc-44a5-9d65-2f6aad326f4b" />
     <Caption>
-      Don't use illustrations or generic images that don't provide context about
-      the customer or user.
+      Don't use illustrations or generic images. Use real life images to provide trust.
     </Caption>
   </Dont>
 </DoDontContainer>
