--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -14,7 +14,9 @@ import {Prose} from '@primer/react-brand'
 
 <Note>
 
-`Prose` is designed to take sanitized HTML as a string and render it with Primer Brand styles. It is not intended to be used with JSX. The `Prose` component doens't sanitize the data internally. It is the responsibility of the consumer to sanitize the data before passing it to the component.
+The `Prose` component renders native HTML elements with Primer Brand styling. `Prose` doesn't sanitize the input data. We recommend sanitizing the data before passing it into `Prose`.
+
+`Prose` currently supports styling the following HTML elements: `<h1>`, `<h2>`, `<h3>`, `<h4>`, `<h5>`, `<h6>`, `<p>`, `<strong>`, `<em>`, `<a>`, `<ul>`, `<ol>`, `<li>`, `<img>`, and `<div>`.
 
 </Note>
 
@@ -22,7 +24,7 @@ import {Prose} from '@primer/react-brand'
 
 ```jsx live
 <Prose
-  rawHtmlMarkup={`
+  html={`
     <h2>Heading level 2</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus ipsum, consectetur convallis diam pretium quis. Proin ut felis ut eros tristique tincidunt.</p>
     <blockquote>Nulla ac odio eu magna hendrerit porta. Donec nec eros quis tortor tincidunt vulputate. Aenean id pharetra diam, sit amet auctor leo. Aliquam erat volutpat.</blockquote>
@@ -36,9 +38,9 @@ import {Prose} from '@primer/react-brand'
       <li>Quisque eu tortor suscipit, congue quam in, bibendum tellus.</li>
     </ul>
     <h3>Heading level 3</h3>
-    <p>Pellentesque non ornare ligula. Suspendisse nibh purus, pretium id tortor sit amet, tincidunt gravida augue. Ut malesuada, nisl vel dignissim mollis, <kbd>Ctrl</kbd>+<kbd>F</kbd> shortcut (⌘+<kbd>F</kbd> on Mac) mi dui molestie erat, nec laoreet est lectus ac urna. </p>
+    <p>Pellentesque non ornare ligula. Suspendisse nibh purus, pretium id tortor sit amet, tincidunt gravida augue. Ut malesuada, nisl vel dignissim mollis</p>
     <img
-      src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
+      src="https://via.placeholder.com/400x400/f5f5f5/f5f5f5.png"
       alt="placeholder, blank area with an off-white background color"
       />
     <h4>Heading level  4</h4>
@@ -57,7 +59,6 @@ import {Prose} from '@primer/react-brand'
     </ol>
     <h6>Heading level 6</h6>
     <p>Pellentesque non ornare ligula. Suspendisse nibh purus, pretium id tortor sit amet, tincidunt gravida augue.</p>
-    <p><iframe width="100%" height="315" src="https://www.youtube.com/embed/4RfD5JiXt3A" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
     <p>Nunc velit odio, posuere eu felis eget, consectetur fermentum nisi. Aenean tempor odio id ornare ultrices. Quisque blandit condimentum tellus, semper efficitur sapien dapibus nec. </p>
     `}
 />
@@ -68,7 +69,7 @@ import {Prose} from '@primer/react-brand'
 ```jsx live
 <Prose
   enableFullWidth
-  rawHtmlMarkup={`
+  html={`
 	<h1>The tools you need to build what you want.</h1>
     <p>Contribute to projects quickly with automatic environment setup.</p>
     <p>Make sure you see the changes you care about.</p>
@@ -104,6 +105,6 @@ import {Prose} from '@primer/react-brand'
 
 | Name              | Type      | Default | Required | Description                                        |
 | :---------------- | :-------- | :-----: | :------- | -------------------------------------------------- |
-| `rawHtmlMarkup`   | `string`  |         | `true`   | Content to be displayed within the Prose component |
+| `html`            | `string`  |         | `true`   | Content to be displayed within the Prose component |
 | `enableFullWidth` | `boolean` | `false` |          | A toggle to remove the default max-width           |
 | `className`       | `string`  |         |          | Sets a custom class on the root element            |
