--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing the FAQ anatomy with a heading, subheading and items with question titles and answers.]()
+![An image showing the FAQ anatomy with a heading, subheading, a list of questions and answer.]()
 
 - Heading: The main title of the FAQ.
 - Subheading: A short description that extends the information provided by the heading and helps group the items in the list.
@@ -55,10 +55,6 @@ Use as many items in the list as needed. If the list is too long, consider using
     </Caption>
   </Dont>
 </DoDontContainer>
-
-## Options
-
-###
 
 ## Related components
 
