--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -51,7 +51,7 @@ Avatars and logos are optional and can be used to provide more credibility about
   </Dont>
 </DoDontContainer>
 
-Testimonials can be used individually or in a group. When using a group of testimonials, use the same size and alignment for all of them. When including an avatar or a logo, use it in all of them and keep the same style and size, and don't alternate between logos and avatars. We recommend using a maximum of 4 testimonials per group to avoid visual noise and to keep the quotes relevant.
+Testimonials can be used individually or in a group. When using a group of testimonials, use the same size and alignment for all of them. When including an avatar or a logo, use them in all testimonials of the group and keep the same style and size— don't alternate between logos and avatars. We recommend using a maximum of 4 testimonials per group to avoid visual noise and to keep the quotes relevant.
 
 <DoDontContainer stacked>
   <Do>
