--- a/apps/docs/content/components/Testimonial/index.mdx
+++ b/apps/docs/content/components/Testimonial/index.mdx
@@ -120,7 +120,7 @@ The testimonial component uses the small size by default. Use the large size to 
     <img src="https://github.com/primer/brand/assets/912236/63143585-1c28-4380-853d-a6e5dff6f8c1" />
     <Caption>
       Don't use the large size in small sized areas or components like rivers, so
-      they don't conflict with the main content, even if the quote is short. Use
+      they don't conflict with the main content. Even if the quote is short, use
       the small size instead.
     </Caption>
   </Dont>
