--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -17,7 +17,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use the section intro to introduce a new section element in the page. Section intros uses full-width of the screen and can be used in conjunction with other components that expands the content introduced. For example, the [card](/components/Card) or the [pillar](/components/Pillar) components.
+Use the section intro to introduce a new section element in the page. The section intro uses the full-width of the screen and can be used in conjunction with other components that expand the content introduced. For example, the [card](/components/Card) or the [pillar](/components/Pillar) components.
 
 We recommmend using the section intro as a header of an HTML `<section>` element. Sections divide the content of the page into thematic groups and represent standalone elements that are typically related to a specific topic or subject within the document.
 
