--- a/apps/docs/content/components/SectionIntro/index.mdx
+++ b/apps/docs/content/components/SectionIntro/index.mdx
@@ -57,7 +57,7 @@ Section intro can be aligned to the start or center of the page. By default, the
     <img src="https://github.com/primer/brand/assets/912236/fa2f7c30-dd11-4b56-82ed-dbcb76245c6e" />
     <Caption>
       Don't use center alignment if the section intro is paired with an image or
-      visual asset placed on the left.
+      visual asset aligned to the left.
     </Caption>
   </Dont>
 </DoDontContainer>
