--- a/apps/docs/content/components/UnorderedList/index.mdx
+++ b/apps/docs/content/components/UnorderedList/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing an unordered list of items separated by dashes](https://github.com/primer/brand/assets/912236/646a4719-dddf-47f5-9b34-85f6addb828e)
+![Unordered list renders as a list with a visual indicator such as a checkmark](https://github.com/primer/brand/assets/912236/646a4719-dddf-47f5-9b34-85f6addb828e)
 
 ## Usage
 
