--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -11,7 +11,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use the text component to provide content and a clear hierarchy structure. The text component renders an HTML `<span>` tag without any default styling. Use `<p>` for any text that is meant to be a paragraph of text. Use multiple text components or `<p> `if needed to structure your content when you have distinct blocks of text that represent individual paragraphs. This helps with readability and makes it easier for search engines and assistive technologies to understand the content.
+Use the text component to provide content and a clear hierarchy structure. The text component renders an HTML `<span>` tag without any default styling. Use `<p>` for any text that is meant to be a paragraph of text. Use multiple text components to represent paragraphs as distinct blocks of text. This helps with readability and makes it easier for search engines and assistive technologies to understand the content.
 
 ## Options
 
