--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -44,7 +44,7 @@ The text size ranges from 100 to 700, with 400 as the default size. This scale i
     <img src="https://github.com/primer/brand/assets/912236/e029b053-eab8-47a7-bd49-b6ce49ac8bdf" />
     <Caption>
       Use a smaller size to provide visual hierarchy when the text is paired
-      with a title. Use as many text as needed to represent different blocks of
+      with a title. Use as many text components as needed to represent different blocks of
       content.
     </Caption>
   </Do>
