--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -66,36 +66,13 @@ The `Prose` component renders native HTML elements with Primer Brand styling. `P
 
 ### Full Width
 
-```jsx live
 <Prose
   enableFullWidth
   html={`
-	<h1>The tools you need to build what you want.</h1>
-    <p>Contribute to projects quickly with automatic environment setup.</p>
-    <p>Make sure you see the changes you care about.</p>
-    <p>Build community around your code.</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus ipsum, consectetur convallis diam pretium quis. Proin ut felis ut eros tristique tincidunt.</p>
 
-    <img
-      src="https://via.placeholder.com/600x400/f5f5f5/f5f5f5.png"
-      alt="placeholder, blank area with an off-white background color"
-    />
-
-    <h2>Automation and CI/CD</h2>
-    <ul>
-      <li>
-        Automate everything: CI/CD, testing, planning, project management, issue labeling, approvals, onboarding, and
-        more.
-      </li>
-      <li>Standardize and scale best practices, security, and compliance across your organization.</li>
-      <li>Get started quickly with thousands of actions from partners and the community.</li>
-    </ul>
-
-    <h2>Security</h2>
-    <p>
-      Secure code as you write it. Automatically review every change to your codebase and identify vulnerabilities
-      before they reach production. <a href="/#">Learn more here.</a>
-    </p>
-`}
+    <p>Nulla ac odio eu magna hendrerit porta. Donec nec eros quis tortor tincidunt vulputate. Aenean id pharetra diam, sit amet auctor leo. Aliquam erat volutpat.</p>
+    `}
 />
 ```
 
