Fixing issue with gatsby build

--- a/apps/docs/content/components/Prose.mdx
+++ b/apps/docs/content/components/Prose.mdx
@@ -68,11 +68,7 @@ The `Prose` component renders native HTML elements with Primer Brand styling. `P
 
 <Prose
   enableFullWidth
-  html={`
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus ipsum, consectetur convallis diam pretium quis. Proin ut felis ut eros tristique tincidunt.</p>
-
-    <p>Nulla ac odio eu magna hendrerit porta. Donec nec eros quis tortor tincidunt vulputate. Aenean id pharetra diam, sit amet auctor leo. Aliquam erat volutpat.</p>
-    `}
+  html={`<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor lectus ipsum, consectetur convallis diam pretium quis. Proin ut felis ut eros tristique tincidunt.</p><p>Nulla ac odio eu magna hendrerit porta. Donec nec eros quis tortor tincidunt vulputate. Aenean id pharetra diam, sit amet auctor leo. Aliquam erat volutpat.</p>`}
 />
 ```
 
