--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -16,7 +16,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use the CTA banner to draw attention around the main user actions. The CTA banner should be used sparingly, and is typically placed at the bottom of the page to close the user journey,
+Use the CTA banner to draw attention around the main user actions. The CTA banner should be used sparingly and is typically placed at the bottom of the page to close the user journey,
 make a short summary of the page, and to persist the main actions. The CTA banner can also be used between other sections on lengthy pages.
 
 The CTA banner can include primary and secondary actions. These actions are rendered as a [button group](/components/ButtonGroup) and follow the same guidelines as the button group component.
