--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -34,7 +34,7 @@ The actions used in a CTA banner are normally the same as the ones used on the [
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/389a4458-a558-4f8f-9656-d1aa51c82b3e" />
     <Caption>
-      Don't use the CTA early on the user journey, use a hero or a section intro
+      Don't use the CTA early on in the user journey, use a hero or a section intro
       component instead.
     </Caption>
   </Dont>
