--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -44,7 +44,7 @@ The actions used in a CTA banner are normally the same as the ones used on the [
 
 ### Align
 
-CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it.
+The CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it.
 
 ### Styles
 
