--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -54,7 +54,7 @@ Hero elements can be aligned to the start or center of the page. By default, the
     <img src="https://github.com/primer/brand/assets/912236/3d96284d-46ae-4211-a291-9750ec54bbf6" />
     <Caption>
       Use left alignment if the hero includes an image or visual asset on the
-      left.
+      right. 
     </Caption>
   </Do>
   <Dont>
