--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -47,7 +47,7 @@ The hero can optionally include primary and secondary actions. These actions are
 
 ### Alignment
 
-Hero elements can be aligned to the start or center of the page. By default, the hero is aligned to the start of the page to allow for an image or a visual asset to be positioned on the left of the hero. Use the center alignment if the asset is centered or not present, or the scenario calls for it.
+Hero elements can be aligned to the start or center of the page. By default, the hero is aligned to the start of the page to allow for an image or a visual asset to be positioned on the right of the hero. Use the center alignment if the asset is centered or not present, or the scenario calls for it.
 
 <DoDontContainer stacked>
   <Do>
