--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -60,8 +60,7 @@ Hero elements can be aligned to the start or center of the page. By default, the
   <Dont>
     <img src="https://github.com/primer/brand/assets/912236/1f56d40e-c3aa-4955-aa8f-a4748e9fe149" />
     <Caption>
-      Don't use center alignment if the hero includes an image or visual asset
-      placed on the left.
+      Don't use center alignment if the hero includes a centered image or visual asset.
     </Caption>
   </Dont>
 </DoDontContainer>
