--- a/apps/docs/content/components/Text/index.mdx
+++ b/apps/docs/content/components/Text/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Text
-description: Use the text component to render body content
+description: Use the text component create a range of body text
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
