--- a/apps/docs/content/components/Text/react.mdx
+++ b/apps/docs/content/components/Text/react.mdx
@@ -5,7 +5,7 @@ a11yReviewed: true
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=354%3A9513'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Text/Text.tsx
 storybook: '/brand/storybook/?path=/story/components-text--scale'
-description: Use the text component to render body content
+description: Use the text component create a range of body text
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
