[Unordererd & OrderedList] Design guidelines (#309)
* Add unordered and ordered list guidelines

--- a/apps/docs/content/components/UnorderedList/react.mdx
+++ b/apps/docs/content/components/UnorderedList/react.mdx
@@ -4,8 +4,11 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/branch/NzBMPIfPrFU9I87d3k7KVq/Primer-Brand?node-id=4045%3A17093&t=XJ9W58VgtbVo74gb-0'
 source: https://github.com/primer/brand/tree/main/packages/react/src/list/UnorderedList/UnorderedList.tsx
 storybook: '/brand/storybook/?path=/story/components-unorderedlist--default'
-description: Use the unordered list component to render a list of unordered items.
+description: Use the unordered list component to present a collection of items without specific ordering.
 ---
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ```js
 import {UnorderedList} from '@primer/react-brand'
