--- a/apps/docs/content/components/OrderedList/react.mdx
+++ b/apps/docs/content/components/OrderedList/react.mdx
@@ -4,8 +4,11 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/branch/NzBMPIfPrFU9I87d3k7KVq/Primer-Brand?node-id=4045%3A17560&t=W8B9ArDngbzJCC2m-0
 source: https://github.com/primer/brand/blob/main/packages/react/src/list/OrderedList/OrderedList.tsx
 storybook: '/brand/storybook/?path=/story/components-orderedlist--default'
-description: Use the ordered list component to render a list of ordered items.
+description: Use the ordered list component to display a list of numbered items.
 ---
+
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
 
 ```js
 import {OrderedList} from '@primer/react-brand'
