--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -8,10 +8,10 @@ export default ComponentLayout
 
 ## Anatomy
 
-![An image showing the FAQ anatomy with a heading, subheading, a list of questions and answer.]()
+![The text component has a heading, optional subheading, and a list of questions and answers.]()
 
 - Heading: The main title of the FAQ.
-- Subheading: A short description that extends the information provided by the heading and helps group the items in the list.
+- Subheading: An optional short description that extends the information provided by the heading and helps group the items in the list.
 - Question: The title of the question.
 - Answer: The answer to the question.
 
