--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -8,7 +8,7 @@ export default ComponentLayout
 
 ## Anatomy
 
-![The text component has a heading, optional subheading, and a list of questions and answers.]()
+![The text component has a heading, optional subheading, and a list of questions and answers.](https://github.com/primer/brand/assets/912236/b2fa1bb7-938c-42ed-a549-fdc9f2759184)
 
 - Heading: The main title of the FAQ.
 - Subheading: An optional short description that extends the information provided by the heading and helps group the items in the list.
@@ -17,38 +17,50 @@ export default ComponentLayout
 
 ## Usage
 
-Use the FAQ to provide answers to common questions about a product or a feature presented on a page. The FAQ allows to the user to quickly scan a list of questions and answers to find the information they need. We recommend placing the FAQ at the bottom of the page, after the main content. Avoid using the FAQ to provide information that is already available in the page.
+Use the FAQ to provide answers to common questions about a product or a feature presented on a page. The FAQ is a good way to provide additional information that is not directly related to the main content of the page. We recommend placing the FAQ at the bottom of the page, after the main content. Avoid using the FAQ to provide information that is already available in the page.
 
-The FAQ is normally used to display long lists of questions and answers and helps reducing vertical space, so we recommend keep questions and answers short and concise.
+Answers should be clear and be no longer than 2-3 paragraphs. If the answer is longer than that, needs visual assets or a specific layout treatment, consider using a different component. For instance, if the answer needs an image, we recommend using a list of [cards](/components/Card) or a [river](/components/River) component instead.
 
-Answers should be clear, provide the necessary information, and be no longer than 2-3 sentences. If the answer is longer than that or needs visual assets, consider using a different component. For instance, if the answer needs an image, we recommend using a list of [card](/components/Card) or a [river](/components/River) component instead. For answers that need to provide a list of tasks, we recommend using an [ordered list](/components/OrderedList). For answers that needs to split the content into different items, we recommend using an [unordered list](/components/UnorderedList).
+For answers that need to provide a list of tasks, we recommend using an [ordered list](/components/OrderedList). To split the content into different items, we recommend using an [unordered list](/components/UnorderedList).
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
-    <img src="" alt="" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/824ebdee-4cc0-425f-8521-2c4e7b06491f"
+      alt=""
+    />
     <Caption>
       Use the FAQ to provide clear answers to common questions. Link to other
-      resources if necessary.
+      resources or use ordered/unordered lists if necessary.
     </Caption>
   </Do>
   <Dont>
-    <img src="" alt="" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/37ca02ce-7eef-47bf-aac0-f24453dff5be"
+      alt=""
+    />
     <Caption>
-      Don't use visual assets or other content-related components in the
-      answers. Use a river or a card component instead.
+      Don't use visual assets or other content-related components within the
+      answers.
     </Caption>
   </Dont>
 </DoDontContainer>
 
-Use as many items in the list as needed. If the list is too long, consider using subheadings to group the items into categories and make it easier for the user to scan the list.
+When using long lists of questions and answers, consider using subheadings to group the items into categories and make it easier for the user to scan the list.
 
-<DoDontContainer>
+<DoDontContainer stacked>
   <Do>
-    <img src="" alt="" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/e38b0b06-24cd-4d45-8939-1ad31bb62e58"
+      alt=""
+    />
     <Caption>Use the subheading to group the questions and answers.</Caption>
   </Do>
   <Dont>
-    <img src="" alt="" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/b47441b5-98c3-4f24-b987-e550ddfbae31"
+      alt=""
+    />
     <Caption>
       Don't list long lists of questions and answers without grouping them. Help
       the user scan the list by using subheadings.
