--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -62,8 +62,8 @@ When using long lists of questions and answers, consider using subheadings to gr
       alt=""
     />
     <Caption>
-      Don't list long lists of questions and answers without grouping them. Help
-      the user scan the list by using subheadings.
+      Don't use long lists of questions and answers. We recommend using
+      subheadings to group them and to help the user scan the list.
     </Caption>
   </Dont>
 </DoDontContainer>
