--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -4,6 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Card/Card.tsx
 storybook: '/brand/storybook/?path=/story/components-card--default'
 description: Use the card component to display information in a compact way and link to other internal pages.
+a11yReviewed: true
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
