--- a/apps/docs/content/components/Card/react.mdx
+++ b/apps/docs/content/components/Card/react.mdx
@@ -4,6 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Card/Card.tsx
 storybook: '/brand/storybook/?path=/story/components-card--default'
 description: Use the card component to display information in a compact way and link to other internal pages.
+a11yReviewed: true
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
@@ -67,8 +68,8 @@ Use the `Label` to add metadata to the `Card`. The `Label` is optional and can b
 
 ```jsx live
 <Card href="https://github.com">
-  <Card.Label>Limited</Card.Label>
   <Card.Heading>Code search & code view</Card.Heading>
+  <Card.Label>Limited</Card.Label>
   <Card.Description>
     Enables you to rapidly search, navigate, and understand code, right from
     GitHub.com.
@@ -121,8 +122,8 @@ Combine `Image` and `Label` when you need to add more metadata or context to the
     src="https://via.placeholder.com/600x400/d3d9df/d3d9df.png"
     alt="placeholder, blank area with an gray background color"
   />
-  <Card.Label color="blue">Beta</Card.Label>
   <Card.Heading>Code search & code view</Card.Heading>
+  <Card.Label color="blue">Beta</Card.Label>
   <Card.Description>
     Enables you to rapidly search, navigate, and understand code, right from
     GitHub.com.
