--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -31,7 +31,7 @@ For answers that need to provide a list of tasks, we recommend using an [ordered
     />
     <Caption>
       Use the FAQ to provide clear answers to common questions. Link to other
-      resources or use ordered/unordered lists if necessary.
+      resources and use ordered/unordered lists if necessary.
     </Caption>
   </Do>
   <Dont>
