--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -19,7 +19,7 @@ export default ComponentLayout
 
 Use the FAQ to provide answers to common questions about a product or a feature presented on a page. The FAQ is a good way to provide additional information that is not directly related to the main content of the page. We recommend placing the FAQ at the bottom of the page, after the main content. Avoid using the FAQ to provide information that is already available in the page.
 
-Answers should be clear and be no longer than 2-3 paragraphs. If the answer is longer than that, needs visual assets or a specific layout treatment, consider using a different component. For instance, if the answer needs an image, we recommend using a list of [cards](/components/Card) or a [river](/components/River) component instead.
+Answers should be clear and be no longer than 2-3 paragraphs. If the answer is longer than the suggested, needs visual assets, or a specific layout treatment, consider using a different component. For instance, if the answer needs an image, we recommend using a list of [cards](/components/Card) or a [river](/components/River) component instead.
 
 For answers that need to provide a list of tasks, we recommend using an [ordered list](/components/OrderedList). To split the content into different items, we recommend using an [unordered list](/components/UnorderedList).
 
