--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -10,7 +10,7 @@ export default ComponentLayout
 
 ![An image showing the CTA banner anatomy with a heading, a description and a button group.](https://github.com/primer/brand/assets/912236/779c909d-21eb-42b8-b3dd-963e0113102c)
 
-- Heading: The main title of the Pillar. It should be short and concise.
+- Heading: The main title of the CTA banner. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
 - Button group: The main and secondary actions the user should take on the page
 
