--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 
 - Heading: The main title of the CTA banner. It should be short and concise.
 - Description: Short text that extends the information provided by the heading.
-- Button group: The main and secondary actions the user should take on the page
+- Button group: The call to actions available to users
 
 ## Usage
 
