Add a11yReviewed badges

--- a/apps/docs/content/components/Pillar/react.mdx
+++ b/apps/docs/content/components/Pillar/react.mdx
@@ -3,6 +3,7 @@ title: Pillar
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Pillar/Pillar.tsx
 storybook: '/brand/storybook/?path=/story/components-pillar--default'
+a11yReviewed: true
 description: Use pillars to group related content together.
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6849-31364&mode=design
 ---
