--- a/apps/docs/content/components/Avatar/react.mdx
+++ b/apps/docs/content/components/Avatar/react.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=543%3A19830&t=Be91VGjX2BANJnQc-11'
 source: https://github.com/primer/brand/tree/main/packages/react/src/Avatar/Avatar.tsx
 storybook: '/brand/storybook/?path=/story/components-Avatar--playground'
-description: Use avatar to display a thumbnail representation of a person.
+description: Use the avatar component to display a thumbnail representation of a person.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
