--- a/apps/docs/content/components/Button/index.mdx
+++ b/apps/docs/content/components/Button/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Button
-description: Use button for the main actions on a page or form.
+description: Use the button component for the main actions on a page or form.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
