--- a/apps/docs/content/components/Button/react.mdx
+++ b/apps/docs/content/components/Button/react.mdx
@@ -5,7 +5,7 @@ a11yReviewed: true
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=2931%3A30104'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Button/Button.tsx
 storybook: '/brand/storybook/?path=/story/components-button--playground'
-description: Use button for the main actions on a page or form.
+description: Use the button component for the main actions on a page or form.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
