--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Button group
-description: Use button group to group related buttons together.
+description: Use the button group component to group related buttons together.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
