--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Card
-description: Use Card to group information in a compact way and link to other pages.
+description: Use the card component to display information in a compact way and link to other internal pages.
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
