--- a/apps/docs/content/components/Heading/react.mdx
+++ b/apps/docs/content/components/Heading/react.mdx
@@ -5,7 +5,7 @@ a11yReviewed: true
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=354%3A8982'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Heading/Heading.tsx
 storybook: '/brand/storybook/?path=/story/components-heading--default'
-description: Use the heading component to render title or subtitle text
+description: Use the heading component to render title or subtitle text.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
