--- a/apps/docs/content/components/Image/index.mdx
+++ b/apps/docs/content/components/Image/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Image
-description: Use an image  to display a graphical representation.
+description: Use the image component to display a graphical representation.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
