--- a/apps/docs/content/components/Label/index.mdx
+++ b/apps/docs/content/components/Label/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Label
-description: Use label to add metadata or indicate the status of items.
+description: Use the label component to add metadata or indicate the status of items.
 ---
 
 import {Box} from '@primer/react'
