--- a/apps/docs/content/components/Pillar/index.mdx
+++ b/apps/docs/content/components/Pillar/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Pillar
-description: Use pillars to group related content together.
+description: Use the pillar component to group related content together.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
