--- a/apps/docs/content/components/River.mdx
+++ b/apps/docs/content/components/River.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=418%3A8416
 source: https://github.com/primer/brand/blob/main/packages/react/src/River/River.tsx
 storybook: '/brand/storybook/?path=/story/components-river--default'
-description: Render text and image pairs
+description: Use the river component to render text and image pairs.
 ---
 
 import {Box as Container, Label} from '@primer/react'
