--- a/apps/docs/content/components/SubdomainNavBar.mdx
+++ b/apps/docs/content/components/SubdomainNavBar.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1024%3A32796
 source: https://github.com/primer/brand/blob/main/packages/react/src/SubdomainNavBar/SubdomainNavBar.tsx
 storybook: '/brand/storybook/?path=/story/components-subdomainnavbar--default'
-description: Top level navigation for subdomain sites.
+description: Use the subdomain nav bar component for top level navigation for subdomain sites.
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
