--- a/apps/docs/content/components/ActionMenu.mdx
+++ b/apps/docs/content/components/ActionMenu.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=4912%3A32799'
 source: https://github.com/primer/brand/tree/main/packages/react/src/ActionMenu/ActionMenu.tsx
 storybook: '/brand/storybook/?path=/story/components-actionmenu-features--default'
-description: Use action menu to display a list of actions or selections that expand through a trigger button.
+description: Use the action menu component to display a list of actions or selections that expand through a trigger button.
 ---
 
 import {Label} from '@primer/react'
