--- a/apps/docs/content/components/AnchorNav.mdx
+++ b/apps/docs/content/components/AnchorNav.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=3359%3A30494&t=7vT79cAF1kbiMd2j-4
 source: https://github.com/primer/brand/blob/main/packages/react/src/AnchorNav/AnchorNav.tsx
 storybook: '/brand/storybook/?path=/story/components-anchornav--playground'
-description: Use anchor nav for prompt navigation to different sections of a page.
+description: Use the anchor nav component for prompt navigation to different sections of a page.
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
