--- a/apps/docs/content/components/CTAForm.mdx
+++ b/apps/docs/content/components/CTAForm.mdx
@@ -4,7 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/CTAForm/CTAForm.tsx
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30754'
 storybook: '/brand/storybook/?path=/story/components-CTAForm--playground'
-description: Use CTA form to create a form that is used to collect minimal information from users.
+description: Use the CTA form component to create a form that is used to collect minimal information from users.
 ---
 
 import {
