--- a/apps/docs/content/components/Checkbox.mdx
+++ b/apps/docs/content/components/Checkbox.mdx
@@ -4,7 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/blob/main/packages/react/src/forms/Checkbox/Checkbox.tsx
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30754'
 storybook: '/brand/storybook/?path=/story/components-forms-textinput--playground'
-description: Use Checkbox to select one or more options of a limited number of choices.
+description: Use the checkbox component to select one or more options of a limited number of choices.
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
