--- a/apps/docs/content/components/Grid.mdx
+++ b/apps/docs/content/components/Grid.mdx
@@ -3,7 +3,7 @@ title: Grid
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Grid/Grid.tsx
 storybook: '/brand/storybook/?path=/story/components-grid--default'
-description: Use Grid to create flexible and responsive grid-based layouts
+description: Use the grid component to create flexible and responsive grid-based layouts.
 ---
 
 import {Label} from '@primer/react'
