--- a/apps/docs/content/components/Hero.mdx
+++ b/apps/docs/content/components/Hero.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=431%3A8481
 source: https://github.com/primer/brand/blob/main/packages/react/src/Hero/Hero.tsx
 storybook: '/brand/storybook/?path=/story/components-hero--default'
-description: Use the Hero component to render a full-width banner on a webpage
+description: Use the hero component to render a full-width banner on a webpage.
 ---
 
 import {
