--- a/apps/docs/content/components/Image/react.mdx
+++ b/apps/docs/content/components/Image/react.mdx
@@ -3,7 +3,7 @@ title: Image
 status: Experimental
 source: https://github.com/primer/brand/blob/main/packages/react/src/Image/Image.tsx
 storybook: '/brand/storybook/?path=/story/components-image--playground'
-description: Use Image to create both normal and responsive image elements.
+description: Use the image component to display a graphical representation.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
