--- a/apps/docs/content/components/Label/react.mdx
+++ b/apps/docs/content/components/Label/react.mdx
@@ -5,7 +5,7 @@ figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=6
 source: https://github.com/primer/brand/blob/main/packages/react/src/Label/Label.tsx
 storybook: '/brand/storybook/?path=/story/components-label--default'
 a11yReviewed: true
-description: Use labels to add metadata or indicate the status of items.
+description: Use the label component to add metadata or indicate the status of items.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
