--- a/apps/docs/content/components/MinimalFooter.mdx
+++ b/apps/docs/content/components/MinimalFooter.mdx
@@ -4,7 +4,7 @@ status: Experimental
 source: https://github.com/primer/brand/blob/main/packages/react/src/MinimalFooter/MinimalFooter.tsx
 figma: https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=4686%3A30927&t=QKh20cPDVIFtBCHj-0
 storybook: '/brand/storybook/?path=/story/components-minimalfooter--default'
-description: Use minimal footer to provide a global footer featuring legal links, GitHub logomarks and footnotes
+description: Use the minimal footer component to provide a global footer featuring legal links, GitHub logomarks and footnotes.
 ---
 
 import {MinimalFooterSocialLinks} from '@primer/react-brand'
