--- a/apps/docs/content/components/Select.mdx
+++ b/apps/docs/content/components/Select.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1793%3A28117'
 source: https://github.com/primer/brand/blob/main/packages/react/src/forms/Select/Select.tsx
 storybook: '/brand/storybook/?path=/story/components-forms-formcontrol--playground'
-description: Enable selection of one option from a list.
+description: Use the select component to enable selection of one option from a list.
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
