--- a/apps/docs/content/components/Testimonial/react.mdx
+++ b/apps/docs/content/components/Testimonial/react.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1852%3A27522'
 source: https://github.com/primer/brand/blob/main/packages/react/src/Testimonial/Testimonial.tsx
 storybook: '/brand/storybook/?path=/story/components-Testimonial--scale'
-description: Use testimonial to display a quote from a customer or user.
+description: Use the testimonial component to display a quote from a customer or user.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
