--- a/apps/docs/content/components/TextInput.mdx
+++ b/apps/docs/content/components/TextInput.mdx
@@ -4,7 +4,7 @@ status: Experimental
 figma: 'https://www.figma.com/file/BJ95AjraesmRCWsKA013GS/Primer-Brand?node-id=1377%3A30676'
 source: https://github.com/primer/brand/blob/main/packages/react/src/forms/TextInput/TextInput.tsx
 storybook: '/brand/storybook/?path=/story/components-forms-textinput--playground'
-description: A single-line text field.
+description: Use the text input component for single-line text field.
 ---
 
 import InlineCode from '@primer/gatsby-theme-doctocat/src/components/inline-code'
