--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -25,17 +25,23 @@ The actions used in a CTA banner are normally the same as the ones used on the [
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/952c6855-139b-42c1-a5df-ae3574c02f3c" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/952c6855-139b-42c1-a5df-ae3574c02f3c"
+      alt=""
+    />
     <Caption>
       Use the CTA banner on the bottom of the page to close the user journey and
       reinforce the main actions.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/389a4458-a558-4f8f-9656-d1aa51c82b3e" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/389a4458-a558-4f8f-9656-d1aa51c82b3e"
+      alt=""
+    />
     <Caption>
-      Don't use the CTA early on in the user journey, use a hero or a section intro
-      component instead.
+      Don't use the CTA early on in the user journey, use a hero or a section
+      intro component instead.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -44,7 +50,7 @@ The actions used in a CTA banner are normally the same as the ones used on the [
 
 ### Align
 
-The CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it.
+The CTA banner elements can be aligned to the start or center of the page. By default, the CTA banner is aligned to the start of the page. Use the center alignment if context calls for it. E.g. Use the left alignement if there's a background image on the right side of the page or center align if the CTA banner is placed between two sections that are centered aligned to not break the visual flow.
 
 ### Styles
 
@@ -54,16 +60,46 @@ The CTA banner uses a solid background color by default. This is the recommended
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/1a142793-0293-4fdd-8eca-a99c8325e340" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/1a142793-0293-4fdd-8eca-a99c8325e340"
+      alt=""
+    />
     <Caption>
       Use the background by default to ensure that the content is legible.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/4d49b984-7baa-4f9e-a1f6-d4214640a4f7" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/4d49b984-7baa-4f9e-a1f6-d4214640a4f7"
+      alt=""
+    />
     <Caption>
       Don't remove the background and keep the shadow, it will make the content
       hard to read.
+    </Caption>
+  </Dont>
+</DoDontContainer>
+
+Avoid using noisy or textured images that will make the content hard to read. Make sure that the combination of background and foreground guarantees compliance with WCAG contrast guidelines. Use an [online contrast checker](https://webaim.org/resources/contrastchecker/) or a [Figma plugin](/guides/accessibility/tools#contrast-plugin) to test your contrast.
+
+<DoDontContainer>
+  <Do>
+    <img
+      src="https://github.com/primer/brand/assets/912236/758ba20a-15c8-43b7-ae80-4be3d97f5d10"
+      alt=""
+    />
+    <Caption>
+      Use background images or colors that guarantee optimal contrast between
+      the background and the foreground.
+    </Caption>
+  </Do>
+  <Dont>
+    <img
+      src="https://github.com/primer/brand/assets/912236/85b6cce9-db22-4359-ba1e-db91a3761a6b"
+      alt=""
+    />
+    <Caption>
+      Don't use images that interfere with the legibility of the content.
     </Caption>
   </Dont>
 </DoDontContainer>
@@ -74,7 +110,10 @@ The CTA banner has a shadow around the component to give it a sense of depth and
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/22ccf3b3-7bed-4997-9b28-4d0d298386ac" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/22ccf3b3-7bed-4997-9b28-4d0d298386ac"
+      alt=""
+    />
     <Caption>
       Remove the shadow and the background to diminish the sense of depth and
       separation from the background or to allow the content to blend with the
@@ -82,7 +121,10 @@ The CTA banner has a shadow around the component to give it a sense of depth and
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/a87c2851-41f4-41c5-810a-47b6270b1173" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/a87c2851-41f4-41c5-810a-47b6270b1173"
+      alt=""
+    />
     <Caption>
       Don't use the shadow and the background together if you want the content
       to blend with the background and the sections that sorround the CTA
@@ -97,13 +139,19 @@ The CTA banner can render a border around the component giving further separatio
 
 <DoDontContainer>
   <Do>
-    <img src="https://github.com/primer/brand/assets/912236/a50c6341-6794-4e94-84bb-5351aad58151" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/a50c6341-6794-4e94-84bb-5351aad58151"
+      alt=""
+    />
     <Caption>
       Use the border only when there is no shadow present on the background.
     </Caption>
   </Do>
   <Dont>
-    <img src="https://github.com/primer/brand/assets/912236/16d47d54-6d42-495b-975e-286cf3c73660" />
+    <img
+      src="https://github.com/primer/brand/assets/912236/16d47d54-6d42-495b-975e-286cf3c73660"
+      alt=""
+    />
     <Caption>
       Don't use the border when there is a shadow present on the background. The
       shadow will provide enough separation between the foreground and
