--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: Hero
-description: Use the hero component to render a full-width banner at the top of a page
+description: Use the hero component to render a full-width banner at the top of a page.
 ---
 
 import CustomVideoPlayer from '../../../src/components/custom-video-player'
