--- a/apps/docs/content/components/Grid/react.mdx
+++ b/apps/docs/content/components/Grid/react.mdx
@@ -3,11 +3,14 @@ title: Grid
 status: Experimental
 source: https://github.com/primer/brand/tree/main/packages/react/src/Grid/Grid.tsx
 storybook: '/brand/storybook/?path=/story/components-grid--default'
-description: Use Grid to create flexible and responsive grid-based layouts
+description: Use the grid component to create flexible and responsive grid-based layouts.
 ---
 
+import ComponentLayout from '../../../src/layouts/component-layout'
+export default ComponentLayout
+
 import {Label} from '@primer/react'
-import {PropTableValues} from '../../src/components'
+import {PropTableValues} from '../../../src/components'
 
 ```js
 import {Grid} from '@primer/react-brand'
