--- a/apps/docs/content/components/Grid/index.mdx
+++ b/apps/docs/content/components/Grid/index.mdx
@@ -12,7 +12,9 @@ export default ComponentLayout
 
 ## Usage
 
-Use the grid component to define a layout that maintains consistent element positioning and sizing across views. The grid uses vertical and horizontal gaps to separate content units consistently in all modules.
+Use the grid component to define a layout that maintains consistent element positioning and sizing across views. Use the grid component to add guides for scale and placement and provide consistency across the product.
+
+The grid component has 12 columns and uses vertical and horizontal gaps to separate content units consistently in all modules. Use the grid to group related content units. E.g. A group of [cards](/components/Card) or [pillars](/components/Pillar).
 
 <DoDontContainer>
   <Do>
@@ -25,8 +27,6 @@ Use the grid component to define a layout that maintains consistent element posi
   </Dont>
 </DoDontContainer>
 
-## Options
-
 ## Related components
 
-- [Stack](/components/Stack): To display related content with less visual emphasis.
+- [Stack](/components/Stack): To enable layout of its immediate children along the vertical or horizontal axis.
