--- a/apps/docs/content/components/CTABanner/index.mdx
+++ b/apps/docs/content/components/CTABanner/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: CTA banner
-description: Use CTA banner to draw attention to or create urgency around a user action.
+description: Use the CTA banner component to draw attention to or create urgency around a user action.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
