--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: FAQ
-description: Display content in a Q&A format
+description: Use the FAQ component to display content in a Q&A format.
 ---
 
 import ComponentLayout from '../../../src/layouts/component-layout'
