--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -17,7 +17,7 @@ export default ComponentLayout
 
 ## Usage
 
-Use the hero component to provide a title, description and action that introduces the main content of a page. The hero component is designed to be positioned at the top of a page and spans the full width of the viewport.
+Use the hero component to provide a title, description and action that introduces the main content of a page. The hero component is designed to be positioned at the top of a page and spans the full width of the viewport. Consider using the [CTA banner](/components/CTABanner) to replicate the content and actions in other parts of the page. 
 
 Both heading and description of the hero should be short and descriptive. Heading should be not be longer than 2 lines, and description should be no longer than 3-4 lines.
 
