--- a/apps/docs/content/components/Hero/index.mdx
+++ b/apps/docs/content/components/Hero/index.mdx
@@ -21,7 +21,7 @@ Use the hero component to provide a title, description and action that introduce
 
 Both heading and description of the hero should be short and descriptive. Heading should be not be longer than 2 lines, and description should be no longer than 3-4 lines.
 
-The hero component is not designed to be used as a banner or advertisement, or to provide a lot of information to the user. Consider using other components, such as the [section intro](/components/SectionIntro) or the [river](/components/River) instead.
+The hero component is not designed to provide a lot of information to the user. Consider using other components, such as the [section intro](/components/SectionIntro) or the [river](/components/River) component instead.
 
 The hero heading is rendered as an `h1` element by default. You can modify the heading level but be aware that this will affect the page's heading structure and may impact accessibility. [See heading accesibility](/components/Heading#accessibility) for more information.
 
