--- a/apps/docs/content/components/FAQ/index.mdx
+++ b/apps/docs/content/components/FAQ/index.mdx
@@ -12,7 +12,7 @@ export default ComponentLayout
 
 - Heading: The main title of the FAQ.
 - Subheading: An optional short description that extends the information provided by the heading and helps group the items in the list.
-- Question: The title of the question.
+- Question: The question being answered. 
 - Answer: The answer to the question.
 
 ## Usage
