[Hero] Design guidelines (#304)
* Add hero design guidelines

--- a/apps/docs/content/components/Card/index.mdx
+++ b/apps/docs/content/components/Card/index.mdx
@@ -122,5 +122,6 @@ The call to action label indicates the action or resource the card links to. It 
 ## Related components
 
 - [Pillar](/components/Pillar): To display related content with less visual emphasis.
+- [River](/components/River): To display a list of content items with a visual asset.
 - [CTABanner](/components/CTABanner): To display a single block of content to draw attention or create urgency around a user action.
 - [UnorderedList](/components/UnorderedList) or the [OrderedList](/components/OrderedList): to display a list of plain content items.
