--- a/apps/docs/content/components/ButtonGroup/index.mdx
+++ b/apps/docs/content/components/ButtonGroup/index.mdx
@@ -67,3 +67,4 @@ The button group component has two sizes: `medium` and `large`. The `medium` siz
 - [Button](/components/Button): To display a button that performs an action.
 - [Link](/components/Link): To display a link that navigates to another page.
 - [Hero](/components/Hero): To display a large heading and a description with a button group.
+- [CTA banner](/components/CTABanner): To draw attention to or create urgency around a user action.
